[gd_scene load_steps=3 format=3 uid="uid://dy7ev3lgjvve1"]

[ext_resource type="Theme" uid="uid://dblqbcjvfvwwx" path="res://assets/font,themes/ui_theme_16.tres" id="1_seb3v"]
[ext_resource type="Script" uid="uid://tqodsj7pfrrr" path="res://ui/containers/talo_leaderboard_container.gd" id="2_036rn"]

[node name="TaloLeaderboardContainer" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_seb3v")
script = ExtResource("2_036rn")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Online Leaderboards"

[node name="LevelSelectContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/LevelSelectContainer"]
layout_mode = 2
text = "Select Level:"

[node name="LevelSelectOption" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/LevelSelectContainer"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/LevelSelectContainer"]
layout_mode = 2
text = "Refresh"

[node name="LoadingLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Loading leaderboard data..."

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EntriesContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"
